Bug #41971 Thread state on embedded server is always "Writing to net"
Submitted: 8 Jan 2009 15:50 Modified: 7 Mar 2010 12:54
Reporter: Davi Arnaut (SCA) Email Updates:
Status: Closed
Category:libmysqld Severity:S3 (Non-critical)
Version:5.1, 6.0 OS:Any
Assigned to: Davi Arnaut Target Version:6.0-rc
Tags: embedded, writing to net
Triage: Triaged: D3 (Medium)

[8 Jan 2009 15:50] Davi Arnaut
Description:
The state of a thread on a embedded server is always displayed as "Writing to net", which is embarrassingly wrong as there is no "net" in the embedded server. This hinders testing of concurrent operations on a embedded server as numerous wait conditions rely on the thread state to synchronize.

How to repeat:
./mtr --embedded-server

SELECT state FROM information_schema.processlist;

Suggested fix:
Display a appropriate thread state.
[24 Mar 2009 15:04] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/70224

2747 Davi Arnaut	2009-03-24
      Bug#41971: Thread state on embedded server is always "Writing to net"
      
      The problem is that the state of a thread on a embedded server is
      always displayed as "Writing to net", which is wrong as there is
      no "network" in the embedded server.
      
      The solution is only exclude, on a embedded server, the thread
      state conditions that are related to network operations. Other
      thread states related to waiting on conditions or other operations
      are preserved.
     @ sql/sql_show.cc
        Unroll conditionals into a function. Skip check for network
        operations on the embedded library. Change use of thd_info->
        command to retrieve the command directly from the thread
        handle -- they have the same value.
[2 Apr 2009 19:39] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/71246

2762 Davi Arnaut	2009-04-02
      Bug#41971: Thread state on embedded server is always "Writing to net"
      
      The problem is that the state of a thread on a embedded server is
      always displayed as "Writing to net", which is wrong as there is
      no "network" in the embedded server.
      
      The solution is only exclude, on a embedded server, the thread
      state conditions that are related to network operations. Other
      thread states related to waiting on conditions or other operations
      are preserved.
     @ sql/sql_show.cc
        Unroll conditionals into a function. Skip check for network
        operations on the embedded library. Change use of thread_info::
        command to retrieve the command directly from the thread
        handle -- they have the same value.
[2 Apr 2009 19:40] Davi Arnaut
Queued to 6.0-runtime
[2 Apr 2009 19:42] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/71247

2763 Davi Arnaut	2009-04-02
      Bug#41971: Thread state on embedded server is always "Writing to net"
      
      The problem is that the state of a thread on a embedded server is
      always displayed as "Writing to net", which is wrong as there is
      no "network" in the embedded server.
      
      The solution is only exclude, on a embedded server, the thread
      state conditions that are related to network operations. Other
      thread states related to waiting on conditions or other operations
      are preserved.
     @ sql/sql_show.cc
        Unroll conditionals into a function. Skip check for network
        operations on the embedded library. Change use of thread_info::
        command to retrieve the command directly from the thread
        handle -- they have the same value.
[16 May 2009 8:41] Bugs System
Pushed into 6.0.12-alpha (revid:alik@sun.com-20090516083402-0avycdy7w6dnn0tv) (version source revid:serg@mysql.com-20090512164111-jz224w5781lhe7wd) (merge vers: 6.0.12-alpha) (pib:6)
[21 May 2009 2:26] Paul DuBois
Noted in 6.0.12 changelog.

The state of a thread for the embedded server was always displayed as
"Writing to net", which is incorrect because there is no network
connection for the embedded server.
[10 Nov 2009 13:56] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/89958

2913 Davi Arnaut	2009-11-10
      Backport of Bug#41971 to mysql-next-mr
      ------------------------------------------------------------
      revno: 2617.31.21
      revision-id: davi.arnaut@sun.com-20090402193933-2zbhg15kd0z3xh8r
      parent: alik@sun.com-20090402081500-78l1hpkx03twe4bf
      committer: Davi Arnaut <Davi.Arnaut@Sun.COM>
      branch nick: 41971-6.0
      timestamp: Thu 2009-04-02 16:39:33 -0300
      message:
        Bug#41971: Thread state on embedded server is always "Writing to net"
           
        The problem is that the state of a thread on a embedded server is
        always displayed as "Writing to net", which is wrong as there is
        no "network" in the embedded server.
      
        The solution is only exclude, on a embedded server, the thread
        state conditions that are related to network operations. Other
        thread states related to waiting on conditions or other operations
        are preserved.
     @ sql/sql_show.cc
        Unroll conditionals into a function. Skip check for network
        operations on the embedded library. Change use of thread_info::
        command to retrieve the command directly from the thread
        handle -- they have the same value.
[10 Nov 2009 18:03] Davi Arnaut
Queued to mysql-next-mr-runtime
[20 Nov 2009 12:54] Bugs System
Pushed into 5.6.0-beta (revid:davi.arnaut@sun.com-20091119234808-xbjpkwaxjt5x5c0b) (version source revid:jon.hauglid@sun.com-20090928163426-2lg1gofzz44xzzxf) (merge vers: 6.0.14-alpha) (pib:13)
[20 Nov 2009 12:56] Bugs System
Pushed into 6.0.14-alpha (revid:kostja@sun.com-20091120124947-yi6h2jbgw0kbciwm) (version source revid:jon.hauglid@sun.com-20090928163426-2lg1gofzz44xzzxf) (merge vers: 6.0.14-alpha) (pib:13)
[20 Nov 2009 23:50] Paul DuBois
Noted in 5.6.0 changelog.
[6 Mar 2010 10:54] Bugs System
Pushed into 5.5.3-m3 (revid:alik@sun.com-20100306103849-hha31z2enhh7jwt3) (version source revid:jon.hauglid@sun.com-20090928163426-2lg1gofzz44xzzxf) (merge vers: 6.0.14-alpha) (pib:16)
[7 Mar 2010 12:54] Paul DuBois
Moved 5.6.0 changelog entry to 5.5.3.